# pyequa

./: .gitignore  .pypirc  0000FirstBasicCase.ipynb  00FirstCase.ipynb  00FirstCase_sympy.py  LICENSE  README.md  casos_ac.md  dados.xlsx  data.xlsx  eq01.qmd  graph.json  paper.bib  pyproject.toml  quarto.ipynb  quarto.qmd  requirements.txt  setup_OLD.py  stats01.py  stats02.py  stats02_caso01.md  wisdomgraph.py  wisdomgraph_tests.py
+arquivo/: enredo.sage
.github/workflows/: draft-pdf.yml
_output_/: df_sc_or_s-study.Rmd  df_sc_or_s-study_2024-12-26_20-49-02.Rmd  df_sc_or_s-study_2024-12-26_20-54-14.Rmd  df_sc_or_s-study_2024-12-26_20-57-12.Rmd  df_sc_or_s-study_2024-12-26_21-00-47.Rmd  df_sc_or_s-study_2024-12-26_21-01-55.Rmd  df_sc_or_s-study_2024-12-26_21-02-12.Rmd  df_sc_or_s-study_2024-12-26_21-03-27.Rmd  df_sc_or_s-study_2024-12-26_21-04-42.Rmd  df_sc_or_s-study_2024-12-26_21-07-22.Rmd  df_sc_or_s-study_2024-12-26_21-08-41.Rmd  df_sc_or_s-study_2024-12-26_21-18-04.Rmd
examples/anova_table/: config.yaml  data.xlsx  data_make.py  exercise_model.md  exercise_model_pt.md  producer.py
examples/cloze/: sc_or_s.py  sc_or_s.xlsx  sc_or_s_2.py
examples/cloze_manyfiles_1/: dados.xlsx  enunciado.md  produtor.py
examples/cloze_manyfiles_2/: builddata.R  config.yaml  dados.xlsx  data.xlsx  exercise_model.md  producer.py  produtor.py
examples/cloze_manyfiles_2_config/: builddata.R  config.yaml  dados.csv  exercise_model.md  (+1 more)
paper/: paper.md
pyequa/: LIXO.py  buildall_exercises_OLD.py  clozeroutines.py  clozescenario.py  config.py  default_config.yaml  moodleservice.py  scenario.py  serviceabstract.py  servicecloze.py  servicetext_original_dont_delete.py  textservice.py  wisdomgraph.py
tests/: implies.py
(+460 files in other folders)
